@@ -1,16 +1,8 @@
-/*
--Xms256m
--Xmx256m
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=./logs/heapdump.hprof
--XX:+UseG1GC
--Xlog:gc=debug:file=./logs/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
-*/
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+package ru.calculator;
 
 import java.time.LocalDateTime;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class CalcDemo {
     private static final Logger log = LoggerFactory.getLogger(CalcDemo.class);
